parser/my_parser.py
import ply.yacc as yacc
from lexer import my_lexer

tokens = my_lexer.tokens

# -----------------------------
# Parser for CustomScript
# -----------------------------
# Set the start symbol
start = 'program'

# Program entry point
def p_program(p):
    'program : statement_list'
    p[0] = p[1]

# Statement list (supports multiple statements)
def p_statement_list(p):
    '''statement_list : statement_list statement
                      | statement'''
    if len(p) == 3:
        p[0] = p[1] + [p[2]]
    else:
        p[0] = [p[1]]

# Variable declaration as a statement
# Supports: var x = expr;
def p_statement_var(p):
    'statement : VAR ID EQUALS expression SEMICOLON'
    p[0] = {'type': 'var_decl', 'name': p[2], 'value': p[4]}

# Assignment statement
def p_statement_assignment(p):
    'statement_assignment : ID EQUALS expression'
    p[0] = {'type': 'assignment', 'name': p[1], 'value': p[3]}

# Assignment statement with semicolon
def p_statement_assignment_stmt(p):
    'statement : statement_assignment SEMICOLON'
    p[0] = p[1]

# Print statement
def p_statement_print(p):
    'statement : PRINT LPAREN expression RPAREN SEMICOLON'
    p[0] = {'type': 'print', 'value': p[3]}

# While loop
def p_statement_while(p):
    'statement : WHILE LPAREN expression RPAREN LBRACE statement_list RBRACE'
    p[0] = {'type': 'while', 'condition': p[3], 'body': p[6]}

# If statement
def p_statement_if(p):
    'statement : IF LPAREN expression RPAREN LBRACE statement_list RBRACE'
    p[0] = {'type': 'if', 'condition': p[3], 'then': p[6]}

# If-else statement
def p_statement_if_else(p):
    'statement : IF LPAREN expression RPAREN LBRACE statement_list RBRACE ELSE LBRACE statement_list RBRACE'
    p[0] = {'type': 'if', 'condition': p[3], 'then': p[6], 'else': p[10]}

# For loop: for (init; cond; update) { body }
def p_statement_for(p):
    'statement : FOR LPAREN for_init SEMICOLON expression SEMICOLON for_update RPAREN LBRACE statement_list RBRACE'
    p[0] = {
        'type': 'for',
        'init': p[3],
        'condition': p[5],
        'update': p[7],
        'body': p[10]
    }

def p_for_init(p):
    '''for_init : VAR ID EQUALS expression
                | ID EQUALS expression
                | empty'''
    if len(p) == 5:
        p[0] = {'type': 'var_decl', 'name': p[2], 'value': p[4]}
    elif len(p) == 4:
        p[0] = {'type': 'assignment', 'name': p[1], 'value': p[3]}
    else:
        p[0] = None

def p_for_update(p):
    '''for_update : ID EQUALS expression
                  | empty'''
    if len(p) == 4:
        p[0] = {'type': 'assignment', 'name': p[1], 'value': p[3]}
    else:
        p[0] = None

def p_empty(p):
    'empty :'
    p[0] = None

# Binary operations (arithmetic and comparison)
def p_expression_binop(p):
    '''expression : expression PLUS expression
                  | expression MINUS expression
                  | expression TIMES expression
                  | expression DIVIDE expression
                  | expression GT expression
                  | expression LT expression
                  | expression GE expression
                  | expression LE expression
                  | expression EQ expression
                  | expression NE expression'''
    p[0] = {'type': 'binop', 'op': p[2], 'left': p[1], 'right': p[3]}

# Number literal
def p_expression_number(p):
    'expression : NUMBER'
    p[0] = {'type': 'number', 'value': p[1]}

# Variable reference
def p_expression_var(p):
    'expression : ID'
    p[0] = {'type': 'var', 'name': p[1]}

# Allow empty statement
# (for extra semicolons or empty blocks)
def p_statement_empty(p):
    'statement : SEMICOLON'
    p[0] = None

# Error handling
def p_error(p):
    if p:
        print(f"Syntax Error: Unexpected token '{p.value}' near line {p.lineno}")
    else:
        print("Syntax Error: Unexpected end of input")

# Build the parser
parser = yacc.yacc()

def parse_code(code):
    return parser.parse(code)
