parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> statement_list
Rule 2     statement_list -> statement_list statement
Rule 3     statement_list -> statement
Rule 4     statement -> VAR ID EQUALS expression SEMICOLON
Rule 5     statement -> ID EQUALS expression SEMICOLON
Rule 6     statement -> PRINT LPAREN expression RPAREN SEMICOLON
Rule 7     statement -> WHILE LPAREN expression RPAREN LBRACE statement_list RBRACE
Rule 8     statement -> IF LPAREN expression RPAREN LBRACE statement_list RBRACE
Rule 9     statement -> IF LPAREN expression RPAREN LBRACE statement_list RBRACE ELSE LBRACE statement_list RBRACE
Rule 10    expression -> expression PLUS expression
Rule 11    expression -> expression MINUS expression
Rule 12    expression -> expression TIMES expression
Rule 13    expression -> expression DIVIDE expression
Rule 14    expression -> expression GT expression
Rule 15    expression -> expression LT expression
Rule 16    expression -> expression GE expression
Rule 17    expression -> expression LE expression
Rule 18    expression -> expression EQ expression
Rule 19    expression -> expression NE expression
Rule 20    expression -> NUMBER
Rule 21    expression -> ID

Terminals, with rules where they appear

DIVIDE               : 13
ELSE                 : 9
EQ                   : 18
EQUALS               : 4 5
GE                   : 16
GT                   : 14
ID                   : 4 5 21
IF                   : 8 9
LBRACE               : 7 8 9 9
LE                   : 17
LPAREN               : 6 7 8 9
LT                   : 15
MINUS                : 11
NE                   : 19
NUMBER               : 20
PLUS                 : 10
PRINT                : 6
RBRACE               : 7 8 9 9
RPAREN               : 6 7 8 9
SEMICOLON            : 4 5 6
TIMES                : 12
VAR                  : 4
WHILE                : 7
error                : 

Nonterminals, with rules where they appear

expression           : 4 5 6 7 8 9 10 10 11 11 12 12 13 13 14 14 15 15 16 16 17 17 18 18 19 19
program              : 0
statement            : 2 3
statement_list       : 1 2 7 8 9 9

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statement_list
    (2) statement_list -> . statement_list statement
    (3) statement_list -> . statement
    (4) statement -> . VAR ID EQUALS expression SEMICOLON
    (5) statement -> . ID EQUALS expression SEMICOLON
    (6) statement -> . PRINT LPAREN expression RPAREN SEMICOLON
    (7) statement -> . WHILE LPAREN expression RPAREN LBRACE statement_list RBRACE
    (8) statement -> . IF LPAREN expression RPAREN LBRACE statement_list RBRACE
    (9) statement -> . IF LPAREN expression RPAREN LBRACE statement_list RBRACE ELSE LBRACE statement_list RBRACE

    VAR             shift and go to state 4
    ID              shift and go to state 5
    PRINT           shift and go to state 6
    WHILE           shift and go to state 7
    IF              shift and go to state 8

    program                        shift and go to state 1
    statement_list                 shift and go to state 2
    statement                      shift and go to state 3

state 1

    (0) S' -> program .



state 2

    (1) program -> statement_list .
    (2) statement_list -> statement_list . statement
    (4) statement -> . VAR ID EQUALS expression SEMICOLON
    (5) statement -> . ID EQUALS expression SEMICOLON
    (6) statement -> . PRINT LPAREN expression RPAREN SEMICOLON
    (7) statement -> . WHILE LPAREN expression RPAREN LBRACE statement_list RBRACE
    (8) statement -> . IF LPAREN expression RPAREN LBRACE statement_list RBRACE
    (9) statement -> . IF LPAREN expression RPAREN LBRACE statement_list RBRACE ELSE LBRACE statement_list RBRACE

    $end            reduce using rule 1 (program -> statement_list .)
    VAR             shift and go to state 4
    ID              shift and go to state 5
    PRINT           shift and go to state 6
    WHILE           shift and go to state 7
    IF              shift and go to state 8

    statement                      shift and go to state 9

state 3

    (3) statement_list -> statement .

    VAR             reduce using rule 3 (statement_list -> statement .)
    ID              reduce using rule 3 (statement_list -> statement .)
    PRINT           reduce using rule 3 (statement_list -> statement .)
    WHILE           reduce using rule 3 (statement_list -> statement .)
    IF              reduce using rule 3 (statement_list -> statement .)
    $end            reduce using rule 3 (statement_list -> statement .)
    RBRACE          reduce using rule 3 (statement_list -> statement .)


state 4

    (4) statement -> VAR . ID EQUALS expression SEMICOLON

    ID              shift and go to state 10


state 5

    (5) statement -> ID . EQUALS expression SEMICOLON

    EQUALS          shift and go to state 11


state 6

    (6) statement -> PRINT . LPAREN expression RPAREN SEMICOLON

    LPAREN          shift and go to state 12


state 7

    (7) statement -> WHILE . LPAREN expression RPAREN LBRACE statement_list RBRACE

    LPAREN          shift and go to state 13


state 8

    (8) statement -> IF . LPAREN expression RPAREN LBRACE statement_list RBRACE
    (9) statement -> IF . LPAREN expression RPAREN LBRACE statement_list RBRACE ELSE LBRACE statement_list RBRACE

    LPAREN          shift and go to state 14


state 9

    (2) statement_list -> statement_list statement .

    VAR             reduce using rule 2 (statement_list -> statement_list statement .)
    ID              reduce using rule 2 (statement_list -> statement_list statement .)
    PRINT           reduce using rule 2 (statement_list -> statement_list statement .)
    WHILE           reduce using rule 2 (statement_list -> statement_list statement .)
    IF              reduce using rule 2 (statement_list -> statement_list statement .)
    $end            reduce using rule 2 (statement_list -> statement_list statement .)
    RBRACE          reduce using rule 2 (statement_list -> statement_list statement .)


state 10

    (4) statement -> VAR ID . EQUALS expression SEMICOLON

    EQUALS          shift and go to state 15


state 11

    (5) statement -> ID EQUALS . expression SEMICOLON
    (10) expression -> . expression PLUS expression
    (11) expression -> . expression MINUS expression
    (12) expression -> . expression TIMES expression
    (13) expression -> . expression DIVIDE expression
    (14) expression -> . expression GT expression
    (15) expression -> . expression LT expression
    (16) expression -> . expression GE expression
    (17) expression -> . expression LE expression
    (18) expression -> . expression EQ expression
    (19) expression -> . expression NE expression
    (20) expression -> . NUMBER
    (21) expression -> . ID

    NUMBER          shift and go to state 18
    ID              shift and go to state 16

    expression                     shift and go to state 17

state 12

    (6) statement -> PRINT LPAREN . expression RPAREN SEMICOLON
    (10) expression -> . expression PLUS expression
    (11) expression -> . expression MINUS expression
    (12) expression -> . expression TIMES expression
    (13) expression -> . expression DIVIDE expression
    (14) expression -> . expression GT expression
    (15) expression -> . expression LT expression
    (16) expression -> . expression GE expression
    (17) expression -> . expression LE expression
    (18) expression -> . expression EQ expression
    (19) expression -> . expression NE expression
    (20) expression -> . NUMBER
    (21) expression -> . ID

    NUMBER          shift and go to state 18
    ID              shift and go to state 16

    expression                     shift and go to state 19

state 13

    (7) statement -> WHILE LPAREN . expression RPAREN LBRACE statement_list RBRACE
    (10) expression -> . expression PLUS expression
    (11) expression -> . expression MINUS expression
    (12) expression -> . expression TIMES expression
    (13) expression -> . expression DIVIDE expression
    (14) expression -> . expression GT expression
    (15) expression -> . expression LT expression
    (16) expression -> . expression GE expression
    (17) expression -> . expression LE expression
    (18) expression -> . expression EQ expression
    (19) expression -> . expression NE expression
    (20) expression -> . NUMBER
    (21) expression -> . ID

    NUMBER          shift and go to state 18
    ID              shift and go to state 16

    expression                     shift and go to state 20

state 14

    (8) statement -> IF LPAREN . expression RPAREN LBRACE statement_list RBRACE
    (9) statement -> IF LPAREN . expression RPAREN LBRACE statement_list RBRACE ELSE LBRACE statement_list RBRACE
    (10) expression -> . expression PLUS expression
    (11) expression -> . expression MINUS expression
    (12) expression -> . expression TIMES expression
    (13) expression -> . expression DIVIDE expression
    (14) expression -> . expression GT expression
    (15) expression -> . expression LT expression
    (16) expression -> . expression GE expression
    (17) expression -> . expression LE expression
    (18) expression -> . expression EQ expression
    (19) expression -> . expression NE expression
    (20) expression -> . NUMBER
    (21) expression -> . ID

    NUMBER          shift and go to state 18
    ID              shift and go to state 16

    expression                     shift and go to state 21

state 15

    (4) statement -> VAR ID EQUALS . expression SEMICOLON
    (10) expression -> . expression PLUS expression
    (11) expression -> . expression MINUS expression
    (12) expression -> . expression TIMES expression
    (13) expression -> . expression DIVIDE expression
    (14) expression -> . expression GT expression
    (15) expression -> . expression LT expression
    (16) expression -> . expression GE expression
    (17) expression -> . expression LE expression
    (18) expression -> . expression EQ expression
    (19) expression -> . expression NE expression
    (20) expression -> . NUMBER
    (21) expression -> . ID

    NUMBER          shift and go to state 18
    ID              shift and go to state 16

    expression                     shift and go to state 22

state 16

    (21) expression -> ID .

    SEMICOLON       reduce using rule 21 (expression -> ID .)
    PLUS            reduce using rule 21 (expression -> ID .)
    MINUS           reduce using rule 21 (expression -> ID .)
    TIMES           reduce using rule 21 (expression -> ID .)
    DIVIDE          reduce using rule 21 (expression -> ID .)
    GT              reduce using rule 21 (expression -> ID .)
    LT              reduce using rule 21 (expression -> ID .)
    GE              reduce using rule 21 (expression -> ID .)
    LE              reduce using rule 21 (expression -> ID .)
    EQ              reduce using rule 21 (expression -> ID .)
    NE              reduce using rule 21 (expression -> ID .)
    RPAREN          reduce using rule 21 (expression -> ID .)


state 17

    (5) statement -> ID EQUALS expression . SEMICOLON
    (10) expression -> expression . PLUS expression
    (11) expression -> expression . MINUS expression
    (12) expression -> expression . TIMES expression
    (13) expression -> expression . DIVIDE expression
    (14) expression -> expression . GT expression
    (15) expression -> expression . LT expression
    (16) expression -> expression . GE expression
    (17) expression -> expression . LE expression
    (18) expression -> expression . EQ expression
    (19) expression -> expression . NE expression

    SEMICOLON       shift and go to state 23
    PLUS            shift and go to state 24
    MINUS           shift and go to state 25
    TIMES           shift and go to state 26
    DIVIDE          shift and go to state 27
    GT              shift and go to state 28
    LT              shift and go to state 29
    GE              shift and go to state 30
    LE              shift and go to state 31
    EQ              shift and go to state 32
    NE              shift and go to state 33


state 18

    (20) expression -> NUMBER .

    SEMICOLON       reduce using rule 20 (expression -> NUMBER .)
    PLUS            reduce using rule 20 (expression -> NUMBER .)
    MINUS           reduce using rule 20 (expression -> NUMBER .)
    TIMES           reduce using rule 20 (expression -> NUMBER .)
    DIVIDE          reduce using rule 20 (expression -> NUMBER .)
    GT              reduce using rule 20 (expression -> NUMBER .)
    LT              reduce using rule 20 (expression -> NUMBER .)
    GE              reduce using rule 20 (expression -> NUMBER .)
    LE              reduce using rule 20 (expression -> NUMBER .)
    EQ              reduce using rule 20 (expression -> NUMBER .)
    NE              reduce using rule 20 (expression -> NUMBER .)
    RPAREN          reduce using rule 20 (expression -> NUMBER .)


state 19

    (6) statement -> PRINT LPAREN expression . RPAREN SEMICOLON
    (10) expression -> expression . PLUS expression
    (11) expression -> expression . MINUS expression
    (12) expression -> expression . TIMES expression
    (13) expression -> expression . DIVIDE expression
    (14) expression -> expression . GT expression
    (15) expression -> expression . LT expression
    (16) expression -> expression . GE expression
    (17) expression -> expression . LE expression
    (18) expression -> expression . EQ expression
    (19) expression -> expression . NE expression

    RPAREN          shift and go to state 34
    PLUS            shift and go to state 24
    MINUS           shift and go to state 25
    TIMES           shift and go to state 26
    DIVIDE          shift and go to state 27
    GT              shift and go to state 28
    LT              shift and go to state 29
    GE              shift and go to state 30
    LE              shift and go to state 31
    EQ              shift and go to state 32
    NE              shift and go to state 33


state 20

    (7) statement -> WHILE LPAREN expression . RPAREN LBRACE statement_list RBRACE
    (10) expression -> expression . PLUS expression
    (11) expression -> expression . MINUS expression
    (12) expression -> expression . TIMES expression
    (13) expression -> expression . DIVIDE expression
    (14) expression -> expression . GT expression
    (15) expression -> expression . LT expression
    (16) expression -> expression . GE expression
    (17) expression -> expression . LE expression
    (18) expression -> expression . EQ expression
    (19) expression -> expression . NE expression

    RPAREN          shift and go to state 35
    PLUS            shift and go to state 24
    MINUS           shift and go to state 25
    TIMES           shift and go to state 26
    DIVIDE          shift and go to state 27
    GT              shift and go to state 28
    LT              shift and go to state 29
    GE              shift and go to state 30
    LE              shift and go to state 31
    EQ              shift and go to state 32
    NE              shift and go to state 33


state 21

    (8) statement -> IF LPAREN expression . RPAREN LBRACE statement_list RBRACE
    (9) statement -> IF LPAREN expression . RPAREN LBRACE statement_list RBRACE ELSE LBRACE statement_list RBRACE
    (10) expression -> expression . PLUS expression
    (11) expression -> expression . MINUS expression
    (12) expression -> expression . TIMES expression
    (13) expression -> expression . DIVIDE expression
    (14) expression -> expression . GT expression
    (15) expression -> expression . LT expression
    (16) expression -> expression . GE expression
    (17) expression -> expression . LE expression
    (18) expression -> expression . EQ expression
    (19) expression -> expression . NE expression

    RPAREN          shift and go to state 36
    PLUS            shift and go to state 24
    MINUS           shift and go to state 25
    TIMES           shift and go to state 26
    DIVIDE          shift and go to state 27
    GT              shift and go to state 28
    LT              shift and go to state 29
    GE              shift and go to state 30
    LE              shift and go to state 31
    EQ              shift and go to state 32
    NE              shift and go to state 33


state 22

    (4) statement -> VAR ID EQUALS expression . SEMICOLON
    (10) expression -> expression . PLUS expression
    (11) expression -> expression . MINUS expression
    (12) expression -> expression . TIMES expression
    (13) expression -> expression . DIVIDE expression
    (14) expression -> expression . GT expression
    (15) expression -> expression . LT expression
    (16) expression -> expression . GE expression
    (17) expression -> expression . LE expression
    (18) expression -> expression . EQ expression
    (19) expression -> expression . NE expression

    SEMICOLON       shift and go to state 37
    PLUS            shift and go to state 24
    MINUS           shift and go to state 25
    TIMES           shift and go to state 26
    DIVIDE          shift and go to state 27
    GT              shift and go to state 28
    LT              shift and go to state 29
    GE              shift and go to state 30
    LE              shift and go to state 31
    EQ              shift and go to state 32
    NE              shift and go to state 33


state 23

    (5) statement -> ID EQUALS expression SEMICOLON .

    VAR             reduce using rule 5 (statement -> ID EQUALS expression SEMICOLON .)
    ID              reduce using rule 5 (statement -> ID EQUALS expression SEMICOLON .)
    PRINT           reduce using rule 5 (statement -> ID EQUALS expression SEMICOLON .)
    WHILE           reduce using rule 5 (statement -> ID EQUALS expression SEMICOLON .)
    IF              reduce using rule 5 (statement -> ID EQUALS expression SEMICOLON .)
    $end            reduce using rule 5 (statement -> ID EQUALS expression SEMICOLON .)
    RBRACE          reduce using rule 5 (statement -> ID EQUALS expression SEMICOLON .)


state 24

    (10) expression -> expression PLUS . expression
    (10) expression -> . expression PLUS expression
    (11) expression -> . expression MINUS expression
    (12) expression -> . expression TIMES expression
    (13) expression -> . expression DIVIDE expression
    (14) expression -> . expression GT expression
    (15) expression -> . expression LT expression
    (16) expression -> . expression GE expression
    (17) expression -> . expression LE expression
    (18) expression -> . expression EQ expression
    (19) expression -> . expression NE expression
    (20) expression -> . NUMBER
    (21) expression -> . ID

    NUMBER          shift and go to state 18
    ID              shift and go to state 16

    expression                     shift and go to state 38

state 25

    (11) expression -> expression MINUS . expression
    (10) expression -> . expression PLUS expression
    (11) expression -> . expression MINUS expression
    (12) expression -> . expression TIMES expression
    (13) expression -> . expression DIVIDE expression
    (14) expression -> . expression GT expression
    (15) expression -> . expression LT expression
    (16) expression -> . expression GE expression
    (17) expression -> . expression LE expression
    (18) expression -> . expression EQ expression
    (19) expression -> . expression NE expression
    (20) expression -> . NUMBER
    (21) expression -> . ID

    NUMBER          shift and go to state 18
    ID              shift and go to state 16

    expression                     shift and go to state 39

state 26

    (12) expression -> expression TIMES . expression
    (10) expression -> . expression PLUS expression
    (11) expression -> . expression MINUS expression
    (12) expression -> . expression TIMES expression
    (13) expression -> . expression DIVIDE expression
    (14) expression -> . expression GT expression
    (15) expression -> . expression LT expression
    (16) expression -> . expression GE expression
    (17) expression -> . expression LE expression
    (18) expression -> . expression EQ expression
    (19) expression -> . expression NE expression
    (20) expression -> . NUMBER
    (21) expression -> . ID

    NUMBER          shift and go to state 18
    ID              shift and go to state 16

    expression                     shift and go to state 40

state 27

    (13) expression -> expression DIVIDE . expression
    (10) expression -> . expression PLUS expression
    (11) expression -> . expression MINUS expression
    (12) expression -> . expression TIMES expression
    (13) expression -> . expression DIVIDE expression
    (14) expression -> . expression GT expression
    (15) expression -> . expression LT expression
    (16) expression -> . expression GE expression
    (17) expression -> . expression LE expression
    (18) expression -> . expression EQ expression
    (19) expression -> . expression NE expression
    (20) expression -> . NUMBER
    (21) expression -> . ID

    NUMBER          shift and go to state 18
    ID              shift and go to state 16

    expression                     shift and go to state 41

state 28

    (14) expression -> expression GT . expression
    (10) expression -> . expression PLUS expression
    (11) expression -> . expression MINUS expression
    (12) expression -> . expression TIMES expression
    (13) expression -> . expression DIVIDE expression
    (14) expression -> . expression GT expression
    (15) expression -> . expression LT expression
    (16) expression -> . expression GE expression
    (17) expression -> . expression LE expression
    (18) expression -> . expression EQ expression
    (19) expression -> . expression NE expression
    (20) expression -> . NUMBER
    (21) expression -> . ID

    NUMBER          shift and go to state 18
    ID              shift and go to state 16

    expression                     shift and go to state 42

state 29

    (15) expression -> expression LT . expression
    (10) expression -> . expression PLUS expression
    (11) expression -> . expression MINUS expression
    (12) expression -> . expression TIMES expression
    (13) expression -> . expression DIVIDE expression
    (14) expression -> . expression GT expression
    (15) expression -> . expression LT expression
    (16) expression -> . expression GE expression
    (17) expression -> . expression LE expression
    (18) expression -> . expression EQ expression
    (19) expression -> . expression NE expression
    (20) expression -> . NUMBER
    (21) expression -> . ID

    NUMBER          shift and go to state 18
    ID              shift and go to state 16

    expression                     shift and go to state 43

state 30

    (16) expression -> expression GE . expression
    (10) expression -> . expression PLUS expression
    (11) expression -> . expression MINUS expression
    (12) expression -> . expression TIMES expression
    (13) expression -> . expression DIVIDE expression
    (14) expression -> . expression GT expression
    (15) expression -> . expression LT expression
    (16) expression -> . expression GE expression
    (17) expression -> . expression LE expression
    (18) expression -> . expression EQ expression
    (19) expression -> . expression NE expression
    (20) expression -> . NUMBER
    (21) expression -> . ID

    NUMBER          shift and go to state 18
    ID              shift and go to state 16

    expression                     shift and go to state 44

state 31

    (17) expression -> expression LE . expression
    (10) expression -> . expression PLUS expression
    (11) expression -> . expression MINUS expression
    (12) expression -> . expression TIMES expression
    (13) expression -> . expression DIVIDE expression
    (14) expression -> . expression GT expression
    (15) expression -> . expression LT expression
    (16) expression -> . expression GE expression
    (17) expression -> . expression LE expression
    (18) expression -> . expression EQ expression
    (19) expression -> . expression NE expression
    (20) expression -> . NUMBER
    (21) expression -> . ID

    NUMBER          shift and go to state 18
    ID              shift and go to state 16

    expression                     shift and go to state 45

state 32

    (18) expression -> expression EQ . expression
    (10) expression -> . expression PLUS expression
    (11) expression -> . expression MINUS expression
    (12) expression -> . expression TIMES expression
    (13) expression -> . expression DIVIDE expression
    (14) expression -> . expression GT expression
    (15) expression -> . expression LT expression
    (16) expression -> . expression GE expression
    (17) expression -> . expression LE expression
    (18) expression -> . expression EQ expression
    (19) expression -> . expression NE expression
    (20) expression -> . NUMBER
    (21) expression -> . ID

    NUMBER          shift and go to state 18
    ID              shift and go to state 16

    expression                     shift and go to state 46

state 33

    (19) expression -> expression NE . expression
    (10) expression -> . expression PLUS expression
    (11) expression -> . expression MINUS expression
    (12) expression -> . expression TIMES expression
    (13) expression -> . expression DIVIDE expression
    (14) expression -> . expression GT expression
    (15) expression -> . expression LT expression
    (16) expression -> . expression GE expression
    (17) expression -> . expression LE expression
    (18) expression -> . expression EQ expression
    (19) expression -> . expression NE expression
    (20) expression -> . NUMBER
    (21) expression -> . ID

    NUMBER          shift and go to state 18
    ID              shift and go to state 16

    expression                     shift and go to state 47

state 34

    (6) statement -> PRINT LPAREN expression RPAREN . SEMICOLON

    SEMICOLON       shift and go to state 48


state 35

    (7) statement -> WHILE LPAREN expression RPAREN . LBRACE statement_list RBRACE

    LBRACE          shift and go to state 49


state 36

    (8) statement -> IF LPAREN expression RPAREN . LBRACE statement_list RBRACE
    (9) statement -> IF LPAREN expression RPAREN . LBRACE statement_list RBRACE ELSE LBRACE statement_list RBRACE

    LBRACE          shift and go to state 50


state 37

    (4) statement -> VAR ID EQUALS expression SEMICOLON .

    VAR             reduce using rule 4 (statement -> VAR ID EQUALS expression SEMICOLON .)
    ID              reduce using rule 4 (statement -> VAR ID EQUALS expression SEMICOLON .)
    PRINT           reduce using rule 4 (statement -> VAR ID EQUALS expression SEMICOLON .)
    WHILE           reduce using rule 4 (statement -> VAR ID EQUALS expression SEMICOLON .)
    IF              reduce using rule 4 (statement -> VAR ID EQUALS expression SEMICOLON .)
    $end            reduce using rule 4 (statement -> VAR ID EQUALS expression SEMICOLON .)
    RBRACE          reduce using rule 4 (statement -> VAR ID EQUALS expression SEMICOLON .)


state 38

    (10) expression -> expression PLUS expression .
    (10) expression -> expression . PLUS expression
    (11) expression -> expression . MINUS expression
    (12) expression -> expression . TIMES expression
    (13) expression -> expression . DIVIDE expression
    (14) expression -> expression . GT expression
    (15) expression -> expression . LT expression
    (16) expression -> expression . GE expression
    (17) expression -> expression . LE expression
    (18) expression -> expression . EQ expression
    (19) expression -> expression . NE expression

  ! shift/reduce conflict for PLUS resolved as shift
  ! shift/reduce conflict for MINUS resolved as shift
  ! shift/reduce conflict for TIMES resolved as shift
  ! shift/reduce conflict for DIVIDE resolved as shift
  ! shift/reduce conflict for GT resolved as shift
  ! shift/reduce conflict for LT resolved as shift
  ! shift/reduce conflict for GE resolved as shift
  ! shift/reduce conflict for LE resolved as shift
  ! shift/reduce conflict for EQ resolved as shift
  ! shift/reduce conflict for NE resolved as shift
    SEMICOLON       reduce using rule 10 (expression -> expression PLUS expression .)
    RPAREN          reduce using rule 10 (expression -> expression PLUS expression .)
    PLUS            shift and go to state 24
    MINUS           shift and go to state 25
    TIMES           shift and go to state 26
    DIVIDE          shift and go to state 27
    GT              shift and go to state 28
    LT              shift and go to state 29
    GE              shift and go to state 30
    LE              shift and go to state 31
    EQ              shift and go to state 32
    NE              shift and go to state 33

  ! PLUS            [ reduce using rule 10 (expression -> expression PLUS expression .) ]
  ! MINUS           [ reduce using rule 10 (expression -> expression PLUS expression .) ]
  ! TIMES           [ reduce using rule 10 (expression -> expression PLUS expression .) ]
  ! DIVIDE          [ reduce using rule 10 (expression -> expression PLUS expression .) ]
  ! GT              [ reduce using rule 10 (expression -> expression PLUS expression .) ]
  ! LT              [ reduce using rule 10 (expression -> expression PLUS expression .) ]
  ! GE              [ reduce using rule 10 (expression -> expression PLUS expression .) ]
  ! LE              [ reduce using rule 10 (expression -> expression PLUS expression .) ]
  ! EQ              [ reduce using rule 10 (expression -> expression PLUS expression .) ]
  ! NE              [ reduce using rule 10 (expression -> expression PLUS expression .) ]


state 39

    (11) expression -> expression MINUS expression .
    (10) expression -> expression . PLUS expression
    (11) expression -> expression . MINUS expression
    (12) expression -> expression . TIMES expression
    (13) expression -> expression . DIVIDE expression
    (14) expression -> expression . GT expression
    (15) expression -> expression . LT expression
    (16) expression -> expression . GE expression
    (17) expression -> expression . LE expression
    (18) expression -> expression . EQ expression
    (19) expression -> expression . NE expression

  ! shift/reduce conflict for PLUS resolved as shift
  ! shift/reduce conflict for MINUS resolved as shift
  ! shift/reduce conflict for TIMES resolved as shift
  ! shift/reduce conflict for DIVIDE resolved as shift
  ! shift/reduce conflict for GT resolved as shift
  ! shift/reduce conflict for LT resolved as shift
  ! shift/reduce conflict for GE resolved as shift
  ! shift/reduce conflict for LE resolved as shift
  ! shift/reduce conflict for EQ resolved as shift
  ! shift/reduce conflict for NE resolved as shift
    SEMICOLON       reduce using rule 11 (expression -> expression MINUS expression .)
    RPAREN          reduce using rule 11 (expression -> expression MINUS expression .)
    PLUS            shift and go to state 24
    MINUS           shift and go to state 25
    TIMES           shift and go to state 26
    DIVIDE          shift and go to state 27
    GT              shift and go to state 28
    LT              shift and go to state 29
    GE              shift and go to state 30
    LE              shift and go to state 31
    EQ              shift and go to state 32
    NE              shift and go to state 33

  ! PLUS            [ reduce using rule 11 (expression -> expression MINUS expression .) ]
  ! MINUS           [ reduce using rule 11 (expression -> expression MINUS expression .) ]
  ! TIMES           [ reduce using rule 11 (expression -> expression MINUS expression .) ]
  ! DIVIDE          [ reduce using rule 11 (expression -> expression MINUS expression .) ]
  ! GT              [ reduce using rule 11 (expression -> expression MINUS expression .) ]
  ! LT              [ reduce using rule 11 (expression -> expression MINUS expression .) ]
  ! GE              [ reduce using rule 11 (expression -> expression MINUS expression .) ]
  ! LE              [ reduce using rule 11 (expression -> expression MINUS expression .) ]
  ! EQ              [ reduce using rule 11 (expression -> expression MINUS expression .) ]
  ! NE              [ reduce using rule 11 (expression -> expression MINUS expression .) ]


state 40

    (12) expression -> expression TIMES expression .
    (10) expression -> expression . PLUS expression
    (11) expression -> expression . MINUS expression
    (12) expression -> expression . TIMES expression
    (13) expression -> expression . DIVIDE expression
    (14) expression -> expression . GT expression
    (15) expression -> expression . LT expression
    (16) expression -> expression . GE expression
    (17) expression -> expression . LE expression
    (18) expression -> expression . EQ expression
    (19) expression -> expression . NE expression

  ! shift/reduce conflict for PLUS resolved as shift
  ! shift/reduce conflict for MINUS resolved as shift
  ! shift/reduce conflict for TIMES resolved as shift
  ! shift/reduce conflict for DIVIDE resolved as shift
  ! shift/reduce conflict for GT resolved as shift
  ! shift/reduce conflict for LT resolved as shift
  ! shift/reduce conflict for GE resolved as shift
  ! shift/reduce conflict for LE resolved as shift
  ! shift/reduce conflict for EQ resolved as shift
  ! shift/reduce conflict for NE resolved as shift
    SEMICOLON       reduce using rule 12 (expression -> expression TIMES expression .)
    RPAREN          reduce using rule 12 (expression -> expression TIMES expression .)
    PLUS            shift and go to state 24
    MINUS           shift and go to state 25
    TIMES           shift and go to state 26
    DIVIDE          shift and go to state 27
    GT              shift and go to state 28
    LT              shift and go to state 29
    GE              shift and go to state 30
    LE              shift and go to state 31
    EQ              shift and go to state 32
    NE              shift and go to state 33

  ! PLUS            [ reduce using rule 12 (expression -> expression TIMES expression .) ]
  ! MINUS           [ reduce using rule 12 (expression -> expression TIMES expression .) ]
  ! TIMES           [ reduce using rule 12 (expression -> expression TIMES expression .) ]
  ! DIVIDE          [ reduce using rule 12 (expression -> expression TIMES expression .) ]
  ! GT              [ reduce using rule 12 (expression -> expression TIMES expression .) ]
  ! LT              [ reduce using rule 12 (expression -> expression TIMES expression .) ]
  ! GE              [ reduce using rule 12 (expression -> expression TIMES expression .) ]
  ! LE              [ reduce using rule 12 (expression -> expression TIMES expression .) ]
  ! EQ              [ reduce using rule 12 (expression -> expression TIMES expression .) ]
  ! NE              [ reduce using rule 12 (expression -> expression TIMES expression .) ]


state 41
